--- a/Style.css
+++ b/Style.css
@@ -1,32 +1,45 @@
+body {
+  background-color: #b3e5fc;
+}
 main {
   text-align: center;
+  background-color: #4dd0e1;
+  width: 480px;
+  margin: auto;
 }
 
 .instructions {
   background-color: blue;
 }
 
-.game {
-  background-color: aquamarine;
-}
-
 h1 {
-  font-size: 3em;
+  font-size: 4em;
 }
 
 h3 {
   font-size: 0.75em;
   padding-top: 1em;
 }
+.spacer {
+  background-color: #006978;
+  height: 0.5em;
+}
 
-#anounce {
-  font-size: 2em;
-  margin-bottom: 2em;
+#remainingSection {
+  background-color: #0097a7;
+  margin: auto;
 }
 
 #remainingMoves {
   font-size: 4em;
-  margin-bottom: 0.5em;
+  /* margin-bottom: 0.5em; */
+}
+
+#anounce {
+  font-size: 2em;
+  margin-bottom: 2em;
+  margin-top: 0.5em;
+  color: #422121;
 }
 
 #activeBoard {
@@ -37,6 +50,7 @@ h3 {
   font-size: 1.5em;
   margin: 2em;
   letter-spacing: 3px;
+  color: rgb(70, 70, 70);
 }
 
 #scoreboard {
@@ -44,6 +58,7 @@ h3 {
   flex-direction: row;
   align-content: center;
   justify-content: center;
+  background-color: #0097a7;
 }
 
 #wins {
